[gd_scene load_steps=34 format=3 uid="uid://6uhqvpiu62qo"]

[ext_resource type="Script" path="res://scripts/mini-games/waky-waky/waky-waky.gd" id="1_cwxsv"]
[ext_resource type="PackedScene" uid="uid://4jv7jiyjgo8o" path="res://scenes/minigames/waking_up/container.tscn" id="2_fsei4"]
[ext_resource type="Texture2D" uid="uid://cmy0mkep88daa" path="res://assets/sprites/waking-up/wacky-wacky.png" id="3_j4i11"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="4_0f2ys"]
[ext_resource type="Texture2D" uid="uid://c1pujxi1q2xhb" path="res://assets/sprites/timer/dynamite-cord.png" id="5_82n1m"]
[ext_resource type="Texture2D" uid="uid://dbvonytcgn0lh" path="res://assets/sprites/timer/dynamite.png" id="6_om53c"]
[ext_resource type="Script" path="res://scripts/animated_texture_rect.gd" id="7_i3rqn"]
[ext_resource type="Texture2D" uid="uid://bmkoad33pnb7u" path="res://assets/sprites/sfx/dynamite_fire.png" id="8_12t8f"]
[ext_resource type="PackedScene" uid="uid://c8vpqg5hr1hef" path="res://scenes/minigames/waking_up/strongarm.tscn" id="9_51doj"]
[ext_resource type="PackedScene" uid="uid://dp8r5hnb04xft" path="res://scenes/minigames/waking_up/cactus.tscn" id="10_sb0cg"]
[ext_resource type="Texture2D" uid="uid://bt07621023gwm" path="res://assets/backgrounds/waky-waky-background.png" id="11_e2wxr"]
[ext_resource type="AudioStream" uid="uid://u1vy5oaefjgd" path="res://assets/audios/Alarm Clock Loud Ringing.mp3" id="12_jlud3"]
[ext_resource type="AudioStream" uid="uid://dr3l011pxmr8b" path="res://assets/audios/jojos bizarre adventure yes yes yes sound effect (#436).ogg" id="13_gx85i"]
[ext_resource type="AudioStream" uid="uid://bmv8erhq503ck" path="res://assets/audios/AUUGHHH Sound Effect.ogg" id="14_yfgoe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x8ccb"]
radius = 3.35411

[sub_resource type="AtlasTexture" id="AtlasTexture_s0yug"]
atlas = ExtResource("3_j4i11")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6dff"]
atlas = ExtResource("3_j4i11")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g3xr"]
atlas = ExtResource("3_j4i11")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyx76"]
atlas = ExtResource("3_j4i11")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_26qlj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0yug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6dff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g3xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyx76")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ptih7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rf3q1"]
atlas = ExtResource("8_12t8f")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vmp4"]
atlas = ExtResource("8_12t8f")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqxac"]
atlas = ExtResource("8_12t8f")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7tjp"]
atlas = ExtResource("8_12t8f")
region = Rect2(24, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3h73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vmp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqxac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf3q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7tjp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_ebpt8"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uy4g5"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_crqh5"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l088b"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_b5ukk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0576806]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_6ubo7"]
resource_name = "text_moving"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0576806, -0.251236]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [50, 55, 50]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbrdi"]
_data = {
"RESET": SubResource("Animation_b5ukk"),
"text_moving": SubResource("Animation_6ubo7")
}

[node name="waky-waky" type="Node2D"]
script = ExtResource("1_cwxsv")

[node name="Arm" parent="." instance=ExtResource("2_fsei4")]
position = Vector2(36, 482)
scale = Vector2(18.2148, -1.07426)

[node name="Alarm" parent="." instance=ExtResource("2_fsei4")]
position = Vector2(36, 760)
scale = Vector2(18.2148, -1.07426)

[node name="NIKOUMOUK" type="Area2D" parent="."]
position = Vector2(946, 757)
scale = Vector2(10, 10)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NIKOUMOUK"]
shape = SubResource("CircleShape2D_x8ccb")

[node name="Sprite2D" type="AnimatedSprite2D" parent="NIKOUMOUK"]
z_index = -3
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_26qlj")
autoplay = "default"
frame_progress = 0.980476

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = 294.0
offset_right = -294.0
offset_bottom = 84.0
grow_horizontal = 2
script = ExtResource("4_0f2ys")
duration = 60

[node name="Progress" type="TextureRect" parent="CanvasLayer/Timer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.1
offset_top = 20.0
offset_right = -0.800003
offset_bottom = 24.0
scale = Vector2(10, 10)
texture = ExtResource("5_82n1m")
expand_mode = 1
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="CanvasLayer/Timer"]
layout_mode = 1
offset_left = -160.0
offset_top = 20.0
offset_right = -144.0
offset_bottom = 36.0
scale = Vector2(10, 10)
texture = ExtResource("6_om53c")
stretch_mode = 4
script = ExtResource("7_i3rqn")
sprites = SubResource("SpriteFrames_ptih7")

[node name="FireFX" type="TextureRect" parent="CanvasLayer/Timer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_right = -35.0
offset_bottom = 8.0
grow_horizontal = 0
scale = Vector2(10, 10)
texture = SubResource("AtlasTexture_rf3q1")
stretch_mode = 4
script = ExtResource("7_i3rqn")
sprites = SubResource("SpriteFrames_d3h73")
frame_index = 2
auto_play = true

[node name="GameOver" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="DiedMessage" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 474.0
offset_top = 385.0
offset_right = 1434.0
offset_bottom = 598.0
text = "Wake up lazy bastard"
label_settings = SubResource("LabelSettings_ebpt8")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ClickToContinue" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 500.0
offset_top = 985.0
offset_right = 1460.0
offset_bottom = 1067.0
text = "Click to continue"
label_settings = SubResource("LabelSettings_ebpt8")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Victory" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="ColorRect" parent="CanvasLayer/Victory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="CanvasLayer/Victory"]
layout_mode = 0
offset_left = 694.0
offset_top = 469.0
offset_right = 1226.0
offset_bottom = 610.0
text = "Damn clock !"
label_settings = SubResource("LabelSettings_uy4g5")
horizontal_alignment = 1

[node name="ClickToContinue" type="Label" parent="CanvasLayer/Victory"]
layout_mode = 0
offset_left = 500.0
offset_top = 985.0
offset_right = 1460.0
offset_bottom = 1067.0
text = "Click to continue"
label_settings = SubResource("LabelSettings_crqh5")
horizontal_alignment = 1
autowrap_mode = 2

[node name="IndicationText" type="Label" parent="CanvasLayer"]
offset_left = 31.0
offset_top = 225.0
offset_right = 976.0
offset_bottom = 464.0
rotation = -0.0576806
pivot_offset = Vector2(250, 75)
text = "Get that motherfucker!"
label_settings = SubResource("LabelSettings_l088b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/IndicationText"]
libraries = {
"": SubResource("AnimationLibrary_jbrdi")
}
autoplay = "text_moving"

[node name="Timer" type="Timer" parent="CanvasLayer/IndicationText"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="JMTAGRANDMERE" parent="." instance=ExtResource("9_51doj")]
position = Vector2(948, 150)
scale = Vector2(30, 30)
collision_layer = 3
collision_mask = 3

[node name="Area2D" parent="." instance=ExtResource("10_sb0cg")]
position = Vector2(485, 947)
scale = Vector2(15, 15)

[node name="Area2D2" parent="." instance=ExtResource("10_sb0cg")]
position = Vector2(1447, 943)
scale = Vector2(15, 15)

[node name="BackgrounCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BackgrounCanvasLayer"]
z_index = -5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_e2wxr")

[node name="FlashDmg" type="ColorRect" parent="."]
visible = false
offset_top = 176.0
offset_right = 1922.0
offset_bottom = 871.0

[node name="AlarmSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jlud3")
volume_db = -6.0
autoplay = true

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_gx85i")
volume_db = 9.0

[node name="Defeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_yfgoe")
volume_db = -9.0

[connection signal="current_position" from="Arm" to="." method="_on_arm_current_position"]
[connection signal="current_position" from="Alarm" to="." method="_on_alarm_current_position"]
[connection signal="area_entered" from="NIKOUMOUK" to="." method="_on_nikoumouk_area_entered"]
[connection signal="body_entered" from="NIKOUMOUK" to="." method="_on_nikoumouk_body_entered"]
[connection signal="on_timeout" from="CanvasLayer/Timer" to="." method="_on_timer_on_timeout"]
[connection signal="motion" from="JMTAGRANDMERE" to="." method="_on_jmtagrandmere_motion"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
